Add domain verification meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="p:domain_verify" content="8a304df5be7494f27f639241b34d33a5"/>
         <title>XXai's Personal Site</title>
     </head>
     <body>
